--- a/Newsletter.html
+++ b/Newsletter.html
@@ -42,7 +42,7 @@ h1 {
 }
 
 .cta-button {
-    background-color: #fff;
+    background-color: #000;
     color: #fff;
     text-size-adjust: 15px;
     font-size: 15px;
@@ -145,8 +145,8 @@ nav {
   <header>
     <nav>
       <ul class="nav-links">
-        <li><a href="Home + About.html">Home</a></li>
-        <li><a href="About Euphony.html">About</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html">About</a></li>
         <li><a href="Newsletter.html">Newsletter</a></li>
       </ul>
     </nav>
